[package]
name = "sqlparser-lalrpop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = { version = "0.19", features = ["lexer"] }
derive-new = "0.5.9"